--- a/css/main.css
+++ b/css/main.css
@@ -524,7 +524,7 @@ nav {
   float: right;
   list-style: none;
   max-width: 45%;
-  margin-bottom: -10px;
+  margin-bottom: -15px;
 }
 
 nav ul li a {
@@ -535,13 +535,16 @@ nav ul li a {
 }
 
 #banner {
-
   max-width: 100%;
   display: block;
   margin-bottom: 20px;
 }
 
 #bannerlg {
+  display: none;
+}
+
+#bannerxl {
   display: none;
 }
 
@@ -573,12 +576,16 @@ div p {
 
 div {
   margin-bottom: 20px;
+  max-width: 100%;
 }
 
 .row {
   clear: both;
 }
 
+div p a {
+  color: black;
+}
 
 /***********************************************
 FLAVORS
@@ -602,7 +609,7 @@ button {
 
 #vanillainfo , #chocolateinfo, #mintinfo, #pumpkininfo, #pbinfo, #cncreaminfo, #coffeeinfo, #raspberryinfo, #blueberryinfo {
   text-align: center;
-  max-width: 720px;
+  max-width: 80%;
   margin: auto;
   display: none;
   margin-bottom: 40px;
@@ -743,9 +750,11 @@ BREAKPOINTS
 
 
 @media (min-width: 769px) {
-
+/******
+HEADER
+******/
 #icon {
-  max-width: 320px;
+  max-width: 250px;
   margin: 35.25px 10px 20px 10px;
   }
 
@@ -759,6 +768,90 @@ BREAKPOINTS
   max-width: 100%;
 }
 
+p {
+  font-size: 1.4em;
 }
 
-@media (min-width: 992px) { ... }
+nav {
+  margin-top: 31.5px;
+  margin-right: 40px;
+}
+
+li {
+  font-size: 1.4em;
+}
+/********
+SIGNUP
+********/
+
+form {
+  max-width: 80%;
+  margin-top: 100px;
+}
+
+form h1 {
+  font-size: 2.6em;
+}
+
+form div {
+  font-size: 2.2em;
+}
+
+form div h3 {
+  font-size: 1.2em;
+}
+
+form label {
+  font-size: 1.6em;
+}
+
+form input {
+  font-size: 1.4em;
+}
+
+/*********
+FLAVORS
+*********/
+
+.flavor {
+  max-width: 200px;
+}
+#flavorwrapper {
+  margin-top: 100px;
+  max-width: 1220px;
+}
+
+
+#vanillainfo , #chocolateinfo, #mintinfo, #pumpkininfo, #pbinfo, #cncreaminfo, #coffeeinfo, #raspberryinfo, #blueberryinfo {
+  font-size: 1.3em;
+  max-width: 1200px;
+}
+
+
+}
+
+@media (min-width: 1440px) {
+
+  #icon {
+    max-width: 320px;
+    margin: 35.25px 10px 20px 10px;
+    }
+
+  #bannerxl {
+    display: block;
+    max-width: 100%;
+  }
+
+  #bannerlg {
+    display: none;
+  }
+
+  li {
+    font-size: 1.6em;
+  }
+
+form {
+  max-width: 900px;
+}
+
+}
