--- a/css/main.css
+++ b/css/main.css
@@ -611,7 +611,6 @@ button {
   text-align: center;
   max-width: 80%;
   margin: auto;
-  display: none;
   margin-bottom: 40px;
 }
 
@@ -621,6 +620,10 @@ div h1 {
   border-radius: 25px;
 }
 
+#buttonBlock {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
 
 /***********************************************
 FORM
